# ascii-render

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_cli.py
.github/workflows/: build.yml
ascii_render/: __init__.py  cli.py  types.py
ascii_render.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ascii_render/core/: effects.py  renderer.py
ascii_render/effects/: __init__.py  glow.py
ascii_render/io/: __init__.py  ansi.py  loader.py  video.py
docs/superpowers/plans/: 2026-03-29-ascii-render-plan.md  2026-04-01-cross-platform-build.md
docs/superpowers/specs/: 2026-03-29-ascii-render-design.md
scripts/: README.md  demo.ps1  demo.sh
tests/: test_cli.py  test_effects.py  test_io.py  test_renderer.py
